--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -24,6 +24,7 @@
         	{% include 'AppBundle:Search:card-back.html.twig' %}
         	{% endif %}
 	        {% if includeReviews %}
+	        	{% include 'AppBundle:Search:display-card-related.html.twig' %}
 	   	    	{% include 'AppBundle:Search:display-card-reviews.html.twig' %}
 	        {% endif %}
 				{% endfor %}
