--- a/src/AppBundle/Resources/views/Builder/initbuild.html.twig
+++ b/src/AppBundle/Resources/views/Builder/initbuild.html.twig
@@ -1,56 +1,53 @@
 {% extends 'AppBundle::layout.html.twig' %}
 {% import "AppBundle::macros.html.twig" as macros %}
 
+{% block javascripts %}
+	{% javascripts '@AppBundle/Resources/public/js/app.deckinit.js' %}
+	<script src="{{ asset_url }}"></script>
+	{% endjavascripts %}
+{% endblock %}
+
 {% block body %}
+
+<style>
+	.investigator-select-item {
+		padding-top : 8px; border : solid white 2px;
+	}
+	.investigator-select-item:hover {
+		border : solid rgba(100, 100, 100, 0.2) 2px;
+	}
+	.investigator-select-item:hover  {
+		background-color : rgba(100, 100, 100, 0.2);
+	}
+</style>
 
 <div class="main white container">
 
-<form action="{{ path('deck_initbuild') }}" method="post" enctype="application/x-www-form-urlencoded">
+<form action="{{ path('deck_initbuild') }}" class="form-inline" method="post" enctype="application/x-www-form-urlencoded">
 <div>
 	<div class="investigator-select">
-		<h1>Select your investigator</h1>
-		<div>
+		<h2>Choose an investigator
+		<select class="form-control" id="deck_init_all" onchange="app.deck_init.update_build_init();">
+			<option value="your">Your Investigators</option>
+			<option value="all">All Investigators</option>
+		</select>
+		</h2>
+		<div class="row" id="my_inv">
+			{% for investigator in my_investigators %}
+				{% include 'AppBundle:Builder:initbuild-investigator.html.twig' %}
+			{% endfor %}
+		</div>
+		<div class="row hidden" id="all_inv">
 			{% for investigator in investigators %}
-	
-				<div class="col-md-4 faint-{{investigator.faction.code}}" style="padding : 2px; padding-top : 10px; border : solid white 1px;">					
-					<div class="col-md-4">
-					<span class="deck-list-investigator-image card-thumbnail-2x card-thumbnail-investigator" title="{{ investigator.name }}" style="background-image:url({{ asset('/bundles/cards/'~investigator.code~'.png') }})"></span>
-					</div>
-					<div class="col-md-8" style="height : 109px; padding-left : 0.2em;">
-					<h4 style="padding : 2px; margin: 0;">{{ macros.card_name_no_link(investigator) }}</h4>
-					<ul style="padding-left : 17px;">
-					<li>Deck Size: {{investigator.deckRequirements.size}}</li>
-					{% for card in investigator.deckRequirements.cards %}					
-					<li>{{ macros.card_name_no_link(card) }}</li>
-					{% endfor %}
-					<li>1 Random Basic Weakness</li>
-					</ul>										
-					</div>
-					<div class="col-md-12">
-					<p><button name="investigator" value="{{ investigator.code }}" type="submit" class="btn btn-primary btn-block">Create {{investigator.name}} Deck</button></p>
-					</div>
-				</div>
-
+				{% include 'AppBundle:Builder:initbuild-investigator.html.twig' %}
 			{% endfor %}
 		</div>
 	</div>
 </div>
-<!--
-<div class="row">
-	<div class="col-md-12">
-		<button type="submit" class="btn btn-primary btn-block">Create the deck and start building</button>
-	</div>
-</div>
--->
+
 </form>
 
 </div>
 
-<script>
-	function update_selection(){
-		$("input[type=radio]").parent().removeClass("selected");
-		$("input[type=radio]:checked").parent().addClass("selected");
-	}
-</script>
 
 {% endblock %}
