add Body to search page

--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -122,6 +122,7 @@
 					<option value="ally">Ally</option>
 					<option value="arcane">One Arcane</option>
 					<option value="arcane x2">Two Arcane</option>
+					<option value="body">Body</option>
 				</select>
 			</div>
 		</div>
