update templates for updated symfony change forerunnerdb to localstorage because of chrome not working

--- a/src/AppBundle/Resources/views/Decklist/comments.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/comments.html.twig
@@ -1,3 +1,4 @@
+{% import "AppBundle::macros.html.twig" as macros %}
 <table class="table">
 <thead>
 <tr><th><span class="fa fa-comment"></span> {{ decklist.nbComments }} comments</th></tr>
