--- a/src/AppBundle/Resources/views/Decklist/table-successor.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-successor.html.twig
@@ -1,3 +1,4 @@
+{% import "AppBundle::macros.html.twig" as macros %}
 <table class="table table-condensed" id="table-successor">
 <thead>
 <tr><th colspan="{% if decklist.successors|length %}4{% else %}1{% endif %}"><span class="fa fa-forward"></span> Inspiration for</th></tr>
