--- a/src/AppBundle/Resources/views/Decklist/table-predecessor.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-predecessor.html.twig
@@ -1,3 +1,4 @@
+{% import "AppBundle::macros.html.twig" as macros %}
 <table class="table table-condensed" id="table-predecessor">
 <thead>
 <tr><th colspan="{% if decklist.precedent %}4{% else %}1{% endif %}"><span class="fa fa-backward"></span> Derived from</th></tr>
