--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -334,11 +334,9 @@
 <fieldset>
 <legend>Submit</legend>
 <div class="row">
-    <div class="form-group">
+    <div class="form-inline">
        {% include 'AppBundle:Search:searchoptions.html.twig' %}
-       <div class="col-sm-3">
-	      <button class="btn btn-primary" type="submit">Search</button>
-       </div>
+       <button class="btn btn-primary form-control" type="submit">Search</button>
     </div>
 </div>
 </fieldset>
