--- a/src/AppBundle/Resources/views/Search/searchbar.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchbar.html.twig
@@ -1,18 +1,22 @@
-<div class="row">
+<div>
 	<form method="GET" action="{{ path('cards_find') }}" id="search-form" role="form">
-		<div class="col-sm-4">
-		<div class="input-group" style="margin-bottom:.5em">
-		  <input type="text" class="form-control smart-filter-help" size="30" name="q" tabindex="1" value="{{ q|default('') }}">
-		  <span class="input-group-btn">
-		      <button class="btn btn-primary" type="submit">Search</button>
-		  </span>
-		</div><!-- /input-group -->
+		<div class="controls form-inline">
+			<span class="input-group">
+			  <input type="text" class="form-control smart-filter-help" size="30" name="q" tabindex="1" value="{{ q|default('') }}">
+			  <span class="input-group-btn">
+			      <button class="btn btn-primary" type="submit">Search</button>
+			  </span>
+			</span>
+			{% include 'AppBundle:Search:searchoptions.html.twig' %}
+			<div class="pull-right checkbox-inline">
+				<label>
+					<input type="checkbox" id="spoilers" name="spoilers" value="hide" {% if not show_spoilers %} checked="checked"{% endif %}> 
+					<span class="align-baseline">Hide Encounter Spoilers</span>
+					<!-- <button class="btn"><span title="Encounter Spoilers" class="fa fa-eye"></span> Show Encounter Spoilers</button>
+					<button class="btn"><span title="Encounter Spoilers" class="fa fa-eye-slash"></span> Hide Encounter Spoilers</button> -->
+				</label>
+			</div>
 		</div>
-		{% include 'AppBundle:Search:searchoptions.html.twig' %}
 	</form>
 </div>
-<div class="row">
-	<div class="col-sm-3 pull-right">
-	<label><input type="checkbox" id="spoilers" name="spoilers" value="hide" {% if not show_spoilers %} checked="checked"{% endif %}> Hide Encounter Spoilers</label>
-	</div>
-</div>
+
