fixed missing tags in rules

--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1842,6 +1842,8 @@
 
 <i>For example: Roland has the Roland’s .38 Special card in play. He has the card “Teamwork” which can allow investigators at the same location to trade or give assets among one another. However, because Roland’s .38 Special is one of Roland’s signature cards, he cannot give it to another investigator.</i></li>
 
+</ul>
+
 <h2 id="Skill_Cards">Skill Cards</h2>
 
 <p>Skill cards represent innate or learned attributes or character traits that improve an investigator's skill tests.</p>
@@ -2194,9 +2196,9 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 <li> A Revelation ability that references "you/your" refers to the investigator who drew the card and is resolving the ability.</li>
 
-<li> When resolving a triggered ability (󲅺, 󲆍, or 󲅹 ability), "you/your" refers to the investigator triggering the ability.</li>
+<li> When resolving a triggered ability ([action], [reaction], or [lightning] ability), "you/your" refers to the investigator triggering the ability.</li>
 
-<li> If an ability contains a clause identifying whom it is targeting, "you/your" in that ability refers to those investigators. <i>For example, Stubborn Detective reads: "While Stubborn Detective is at your location..." this clause identifies "you" as any investigator at his location. Young Deep One reads: "After Young Deep One engages you..." this clause identifies "you" as any investigator who engages Young Deep One.</li>
+<li> If an ability contains a clause identifying whom it is targeting, "you/your" in that ability refers to those investigators. <i>For example, Stubborn Detective reads: "While Stubborn Detective is at your location..." this clause identifies "you" as any investigator at his location. Young Deep One reads: "After Young Deep One engages you..." this clause identifies "you" as any investigator who engages Young Deep One.</i></li>
 
 <li> Any other instance of "you/your" that does not fall into the above categories refers to the investigator who controls the card, the investigator who has the card in his/her threat area, or who is currently interacting with the card.</li>
 
@@ -2206,9 +2208,12 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 <p><i>For example: Dreams of R’lyeh reads:
 <br>"Revelation - Put Dreams of R’lyeh into play in your threat area. You get –1 [willpower] and –1 sanity.
-<br>[action]: Test [willpower] (3). If you succeed, Discard Dreams of R’lyeh."</p>
+<br>[action]: Test [willpower] (3). If you succeed, Discard Dreams of R’lyeh."</i></p>
 
-<p>These three abilities reference "you/your" in different ways. For the Revelation ability, "your" refers to the investigator who drew Dreams of R’lyeh and is resolving its Revelation. For its constant ability, "you" refers to the investigator who has Dreams of R’lyeh in his or her threat area. For its [action] ability, "you" refers to the investigator who is performing the [action] ability.</p>
+<p>These three abilities reference "you/your" in different ways. For the Revelation ability, "your" refers to the 
+	investigator who drew Dreams of R’lyeh and is resolving its Revelation. For its constant ability, "you" refers to 
+	the investigator who has Dreams of R’lyeh in his or her threat area. For its [action] ability, "you" refers to the 
+	investigator who is performing the [action] ability.</p>
 
 <h1 id="Appendix_I_Initiation_Sequence">Appendix I: Initiation Sequence</h1>
 
