--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -108,6 +108,7 @@
 	<li><a href="#Hand_Size">Hand Size</a></li>
 	<li><a href="#Heal">Heal</a></li>
 	<li><a href="#Health_and_Damage">Health and Damage</a></li>
+	<li><a href="#Hidden">Hidden</a></li>
 	<li><a href="#Hunter">Hunter</a></li>
 	<li><a href="#If">If</a></li>
 	<li><a href="#Immune">Immune</a></li>
@@ -1235,6 +1236,10 @@
 </ul>
 
 <p>See also: "<a href="#Direct_Damage_Direct_Horror">Direct Damage, Direct Horror</a>" on page 9.</p>
+
+<h2 id="Hidden" style="color:red">Hidden (added in <em>The Path to Carcosa</em>)</h2>
+
+<p>Some encounter cards in <em>The Path to Carcosa</em> campaign have the /"hidden/" keyword. Hidden cards have <b>Revelation</b> abilities that secretly add them to your hand. This should be done without revealing that card or its text to the other investigators. While a hidden card is in your hand, treat it as if it were in your threat area. Its Constant abilities are active, and abilities on it can be triggered, but only by you. A hidden card counts toward your hand size, but it cannot be discarded from your hand by <i>any</i> means except those described on the card. When discarded, hidden cards are placed in the encounter discard pile. They do not remain a part of your deck like weaknesses do. For the best experience, players are encouraged to stay /"in character/" and not share information about hidden cards in their hand.</p>
 
 <h2 id="Hunter">Hunter</h2>
 
