increase publishing limit update faq text

--- a/src/AppBundle/Resources/views/Search/display-card-reviews.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card-reviews.html.twig
@@ -6,7 +6,7 @@
 </form>
 {% if card.faqs|length %}
 	<div style="line-height:34px" id="faq-header">
-		<span style="font-size:24px">FAQs</span> (from official FAQ or responses from <a href="https://www.fantasyflightgames.com/en/contact/rules/">official rules question form</a>)
+		<span style="font-size:24px">FAQs</span> (taken from the official FAQ or FFG's responses to the <a href="https://www.fantasyflightgames.com/en/contact/rules/">official rules question form</a>)
 	</div>
 
 		{% for review in card.faqs %}
