add faqs link to header

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -56,6 +56,7 @@
             <li><a href="{{ path('cards_search') }}">Cards</a></li>
             <li class="hidden-sm"><a href="{{ path('card_reviews_list') }}">Reviews</a></li>
             <li class="hidden-sm"><a href="{{ path('rules') }}">Rules</a></li>
+            <li class="hidden-sm"><a href="{{ path('card_faqs_list') }}">FAQs</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown hidden-xs hidden-lg">
