--- a/src/AppBundle/Resources/views/Default/allsets.html.twig
+++ b/src/AppBundle/Resources/views/Default/allsets.html.twig
@@ -1,10 +1,10 @@
 <ol>
 	{% for cycle in data %}
-		<li><a href="{{ cycle.url }}">{{ cycle.name }}</a><span> {% if cycle.known != cycle.total %}({{cycle.known}}/{{cycle.total}}){% endif %}</span>
+		<li><a href="{{ cycle.url }}">{{ cycle.name }}</a><span> </span>
 		{% if cycle.packs is defined %}
 		<ol>
 		{% for pack in cycle.packs %}
-		<li><a href="{{ pack.url }}">{{ pack.name }}</a><span> {% if pack.known != pack.total %}({{pack.known}}/{{pack.total}}){% endif %}</span></li>
+		<li><a {% if pack.available == false %}class="card-preview" title="Not yet released"{% endif %} href="{{ pack.url }}">{{ pack.name }}</a><span> {% if pack.available == false %}({{pack.known}} cards){% endif %}</span></li>
 		{% endfor %}
 		</ol>
 		{% endif %}
