--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -201,18 +201,18 @@
     </div>
     
     <div class="col-sm-3">
-        <div class="form-group">
-			<label for="y">Quantity</label>
-			<div class="row">
-                <div class="col-xs-5">
-                    <select name="yo" id="yo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
-                </div>
-                <div class="col-xs-7">
-                    <input id="y" name="y" value="" class="form-control">
-                </div>
+			<div class="form-group">
+				<label for="y">Quantity</label>
+				<div class="row">
+					<div class="col-xs-5">
+						<select name="yo" id="yo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+					</div>
+					<div class="col-xs-7">
+					<input id="qt" name="qt" value="" class="form-control">
+					</div>
+				</div>
 			</div>
 		</div>
-    </div>
 </div>
 
 <div class="row">
