Rename ThronesDB to ArkhamDB on auth page

--- a/app/Resources/FOSOAuthServerBundle/views/Authorize/authorize_content.html.twig
+++ b/app/Resources/FOSOAuthServerBundle/views/Authorize/authorize_content.html.twig
@@ -1,7 +1,7 @@
 
 <div class="panel panel-default">
 <div class="panel-heading">
-<h3 class="panel-title" style="line-height:2em">ThronesDB Authorization</h3>
+<h3 class="panel-title" style="line-height:2em">ArkhamDB Authorization</h3>
 </div>
 <div class="panel-body">
 	  <p>
@@ -11,8 +11,8 @@
 		   If you agree, <i>{{ client.name }}</i> will be able to perform the following operations on your behalf:
 	   </p>
 	   <ul>
-		   <li>Read your decks saved on ThronesDB</li>
-		   <li>Modify a deck or create a new one on ThronesDB</li>
+		   <li>Read your decks saved on ArkhamDB</li>
+		   <li>Modify a deck or create a new one on ArkhamDB</li>
 		</ul>
 </p>
   <div class="form">
