Fix stale ThronesDB on auth/login screen

--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -8,7 +8,7 @@
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title" style="line-height:2em">Welcome on ThronesDB</h3>
+					<h3 class="panel-title" style="line-height:2em">Welcome on ArkhamDB</h3>
 				</div>
 				<div class="panel-body">
 					<div class="form">
@@ -18,11 +18,11 @@
 							<div class='form_error'>{{ error }}</div>
 							{% endif %}
 							<div class="form-group">
-								<label for="username">ThronesDB Username</label>
+								<label for="username">ArkhamDB Username</label>
 								<p><input type="text" class="form-control" id="username" name="_username" /></p>
 							</div>
 							<div class="form-group">
-								<label for="password">ThronesDB Password</label>
+								<label for="password">ArkhamDB Password</label>
 								<p><input type="password" class="form-control" id="password" name="_password" /></p>
 							</div>
 							<div>
